# audio-tab-generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
e2e_tests/: audio_to_tabs_test.py
e2e_tests/expected_outputs/: hammer_ons.txt  open_strings.txt
e2e_tests/test_output/: hammer_ons.mid  hammer_ons.txt
src/audio_tab_generator/: audio_to_midi.py  construct_audio.py  generate_audio.py  generate_tabs.py  interpret_audio.py  midi_to_audio.py  midi_to_tabs.py  run.py
src/audio_tab_generator/converters/: audio_to_midi.py  midi_to_audio.py  midi_to_tabs.py
src/audio_tab_generator/models/: chord.py  chord_test.py  note.py  note_cluster.py  note_cluster_test.py
src/converters/: audio_to_midi.py  midi_to_tabs.py
src/models/: note_cluster.py  note_cluster_test.py
test_audio/: test.m4a
tests/: e2e_test.py
