[project]
name = "audio-tab-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "David McGurk",email = "david.mcgurk@tngtech.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "audio_tab_generator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
