[project]
name = "audio-tab-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "David McGurk",email = "david.mcgurk@tngtech.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "numpy (>1.24.4, <1.26)",
    "basic-pitch[tf] (>=0.4.0,<0.5.0)",
    "scikit-learn (==1.5.1)",
    "soundfile (>=0.13.1,<0.14.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "pydub (>=0.25.1,<0.26.0)"
]

[tool.poetry]
packages = [{include = "audio_tab_generator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
